@@ -38,7 +38,7 @@ class TypeScriptTypeMappingTest {
             .parse(new InMemoryExecutionContext(), goat)
             .map(s -> (JS.CompilationUnit) s)
             .collect(Collectors.toList())
-            .get(0);
+            .getFirst();
     private static final List<JavaType.FullyQualified> classes = cu
             .getStatements()
             .stream()
@@ -46,7 +46,7 @@ class TypeScriptTypeMappingTest {
             .map(it -> (J.ClassDeclaration) it)
             .map(J.ClassDeclaration::getType)
             .collect(Collectors.toList());
-    private static final JavaType.Parameterized goatType = TypeUtils.asParameterized(classes.get(0));
+    private static final JavaType.Parameterized goatType = TypeUtils.asParameterized(classes.getFirst());
 
     // TODO: add methods to access methods via name.
     // Add methods to access types as types are added.
@@ -92,7 +92,7 @@ class TypeScriptTypeMappingTest {
         String sourcePath = getSourcePath();
         JavaType.Parameterized parameterized = (JavaType.Parameterized) firstMethodParameter("parameterized");
         assertThat(parameterized.getType().getFullyQualifiedName()).isEqualTo("%s.PT", sourcePath);
-        assertThat(TypeUtils.asFullyQualified(parameterized.getTypeParameters().get(0)).getFullyQualifiedName()).isEqualTo("%s.A", sourcePath);
+        assertThat(TypeUtils.asFullyQualified(parameterized.getTypeParameters().getFirst()).getFullyQualifiedName()).isEqualTo("%s.A", sourcePath);
     }
 
     @Test
@@ -100,7 +100,7 @@ class TypeScriptTypeMappingTest {
         String sourcePath = getSourcePath();
         JavaType.Parameterized parameterized = (JavaType.Parameterized) firstMethodParameter("parameterizedRecursive");
         assertThat(parameterized.getType().getFullyQualifiedName()).isEqualTo("%s.PT", sourcePath);
-        assertThat(TypeUtils.asFullyQualified(parameterized.getTypeParameters().get(0)).getFullyQualifiedName()).isEqualTo("%s.PT", sourcePath);
+        assertThat(TypeUtils.asFullyQualified(parameterized.getTypeParameters().getFirst()).getFullyQualifiedName()).isEqualTo("%s.PT", sourcePath);
     }
 
     @Test
@@ -111,10 +111,10 @@ class TypeScriptTypeMappingTest {
 
     @Test
     void generic() {
-        JavaType.GenericTypeVariable generic = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(firstMethodParameter("generic")).getTypeParameters().get(0);
+        JavaType.GenericTypeVariable generic = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(firstMethodParameter("generic")).getTypeParameters().getFirst();
         assertThat(generic.getName()).isEqualTo("T");
         assertThat(generic.getVariance()).isEqualTo(COVARIANT);
-        assertThat(TypeUtils.asFullyQualified(generic.getBounds().get(0)).getFullyQualifiedName()).isEqualTo("%s.A", getSourcePath());
+        assertThat(TypeUtils.asFullyQualified(generic.getBounds().getFirst()).getFullyQualifiedName()).isEqualTo("%s.A", getSourcePath());
     }
 
     @Test
@@ -126,7 +126,7 @@ class TypeScriptTypeMappingTest {
 
     @Test
     void genericUnbounded() {
-        JavaType.GenericTypeVariable generic = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(firstMethodParameter("genericUnbounded")).getTypeParameters().get(0);
+        JavaType.GenericTypeVariable generic = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(firstMethodParameter("genericUnbounded")).getTypeParameters().getFirst();
         assertThat(generic.getName()).isEqualTo("U");
         assertThat(generic.getVariance()).isEqualTo(INVARIANT);
     }
@@ -135,10 +135,10 @@ class TypeScriptTypeMappingTest {
     void genericMultipleBounds() {
         String sourcePath = getSourcePath();
         List<JavaType> typeParameters = goatType.getTypeParameters();
-        JavaType.GenericTypeVariable generic = (JavaType.GenericTypeVariable) typeParameters.get(typeParameters.size() - 1);
+        JavaType.GenericTypeVariable generic = (JavaType.GenericTypeVariable) typeParameters.getLast();
         assertThat(generic.getName()).isEqualTo("S");
         assertThat(generic.getVariance()).isEqualTo(COVARIANT);
-        assertThat(TypeUtils.asFullyQualified(generic.getBounds().get(0)).getFullyQualifiedName()).isEqualTo("%s.PT", sourcePath);
+        assertThat(TypeUtils.asFullyQualified(generic.getBounds().getFirst()).getFullyQualifiedName()).isEqualTo("%s.PT", sourcePath);
         assertThat(TypeUtils.asFullyQualified(generic.getBounds().get(1)).getFullyQualifiedName()).isEqualTo("%s.A", sourcePath);
     }
 
@@ -147,17 +147,17 @@ class TypeScriptTypeMappingTest {
         String sourcePath = getSourcePath();
         JavaType.Parameterized param = (JavaType.Parameterized) firstMethodParameter("genericRecursive");
         assertThat(param.toString()).isEqualTo("%s.TypeScriptTypeGoat<Generic{U extends %s.TypeScriptTypeGoat<Generic{U}, unknown>}[], unknown>", sourcePath, sourcePath);
-        JavaType.Array.GenericTypeVariable generic = (JavaType.GenericTypeVariable) ((JavaType.Array) param.getTypeParameters().get(0)).getElemType();
+        JavaType.Array.GenericTypeVariable generic = (JavaType.GenericTypeVariable) ((JavaType.Array) param.getTypeParameters().getFirst()).getElemType();
         assertThat(generic.getName()).isEqualTo("U");
         assertThat(generic.getVariance()).isEqualTo(COVARIANT);
-        assertThat(TypeUtils.asParameterized(generic.getBounds().get(0))).isNotNull();
+        assertThat(TypeUtils.asParameterized(generic.getBounds().getFirst())).isNotNull();
 
-        JavaType.GenericTypeVariable elemType = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(generic.getBounds().get(0)).getTypeParameters().get(0);
+        JavaType.GenericTypeVariable elemType = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(generic.getBounds().getFirst()).getTypeParameters().getFirst();
         assertThat(elemType.getName()).isEqualTo("U");
         assertThat(elemType.getVariance()).isEqualTo(COVARIANT);
         assertThat(elemType.getBounds()).hasSize(1);
 
-        JavaType.GenericTypeVariable gtv = (JavaType.GenericTypeVariable) ((JavaType.Parameterized) elemType.getBounds().get(0)).getTypeParameters().get(0);
+        JavaType.GenericTypeVariable gtv = (JavaType.GenericTypeVariable) ((JavaType.Parameterized) elemType.getBounds().getFirst()).getTypeParameters().getFirst();
         assertThat(gtv.toString()).isEqualTo("Generic{U extends %s.TypeScriptTypeGoat<Generic{U}, unknown>}", sourcePath);
     }
 
@@ -165,7 +165,7 @@ class TypeScriptTypeMappingTest {
     void inheritedTypeScriptTypeGoat() {
         String sourcePath = getSourcePath();
         JavaType.Parameterized clazz = (JavaType.Parameterized) firstMethodParameter("inheritedTypeScriptTypeGoat");
-        assertThat(clazz.getTypeParameters().get(0).toString()).isEqualTo("Generic{T}");
+        assertThat(clazz.getTypeParameters().getFirst().toString()).isEqualTo("Generic{T}");
         assertThat(clazz.getTypeParameters().get(1).toString()).isEqualTo("Generic{U extends %s.PT<Generic{U}> & %s.C}", sourcePath, sourcePath);
         assertThat(clazz.toString()).isEqualTo("%s.InheritedTypeScriptTypeGoat<Generic{T}, Generic{U extends %s.PT<Generic{U}> & %s.C}>", sourcePath, sourcePath, sourcePath);
     }
@@ -174,7 +174,7 @@ class TypeScriptTypeMappingTest {
     void genericIntersectionType() {
         String sourcePath = getSourcePath();
         JavaType.GenericTypeVariable clazz = (JavaType.GenericTypeVariable) firstMethodParameter("genericIntersection");
-        assertThat(clazz.getBounds().get(0).toString()).isEqualTo("type.analysis.Anonymous");
+        assertThat(clazz.getBounds().getFirst().toString()).isEqualTo("type.analysis.Anonymous");
         assertThat(clazz.getBounds().get(1).toString()).isEqualTo("%s.PT<Generic{U extends type.analysis.Anonymous & %s.C}>", sourcePath, sourcePath, sourcePath);
         assertThat(clazz.getBounds().get(2).toString()).isEqualTo("%s.C", sourcePath);
         assertThat(clazz.toString()).isEqualTo("Generic{U extends type.analysis.Anonymous & %s.PT<Generic{U}> & %s.C}", sourcePath, sourcePath);
@@ -189,9 +189,9 @@ class TypeScriptTypeMappingTest {
                 .filter(m -> m instanceof JavaType.Variable)
                 .collect(Collectors.toList());
         assertThat(enumConstants).hasSize(2);
-        assertThat(enumConstants.get(0).getName()).isEqualTo("FOO");
-        assertThat(TypeUtils.asFullyQualified(enumConstants.get(0).getOwner()).getFullyQualifiedName()).isEqualTo("%s.EnumTypeA", sourcePath);
-        assertThat(TypeUtils.asFullyQualified(enumConstants.get(0).getType()).getFullyQualifiedName()).isEqualTo("%s.EnumTypeA", sourcePath);
+        assertThat(enumConstants.getFirst().getName()).isEqualTo("FOO");
+        assertThat(TypeUtils.asFullyQualified(enumConstants.getFirst().getOwner()).getFullyQualifiedName()).isEqualTo("%s.EnumTypeA", sourcePath);
+        assertThat(TypeUtils.asFullyQualified(enumConstants.getFirst().getType()).getFullyQualifiedName()).isEqualTo("%s.EnumTypeA", sourcePath);
         assertThat(enumConstants.get(1).getName()).isEqualTo("BAR");
         assertThat(TypeUtils.asFullyQualified(enumConstants.get(1).getOwner()).getFullyQualifiedName()).isEqualTo("%s.EnumTypeA", sourcePath);
         assertThat(TypeUtils.asFullyQualified(enumConstants.get(1).getType()).getFullyQualifiedName()).isEqualTo("%s.EnumTypeA", sourcePath);
@@ -214,7 +214,7 @@ class TypeScriptTypeMappingTest {
     }
 
     JavaType firstMethodParameter(String methodName) {
-        return methodType(methodName).getParameterTypes().get(0);
+        return methodType(methodName).getParameterTypes().getFirst();
     }
 
     JavaType.Variable firstField(String fieldName) {
